--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1,3 +1,14 @@
+/* tailwind.css */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Pengaturan tema global */
+html,
+body {
+  @apply bg-white text-gray-900 dark:bg-gray-950 dark:text-gray-50;
+  @media (prefers-color-scheme: dark) {
+    color-scheme: dark;
+  }
+}
